get LB DNS names
